# Woonitor

./: .env.template  .gitignore  2023-11-28--10-22--output.json  Dockerfile  Dockerfile.scraper  Dockerfile.writer  LICENSE  README.md  docker-compose.yml  frontend.dockerfile  json_to_csv.py  prometheus.yml  pyproject.toml  requirements.txt  scraper.dockerfile
Web/: manage.py
Web/Woonitor/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/: Dockerfile  app.py  docker-compose.yaml  requirements.txt
django_project/: db.sqlite3
django_project/funda/: items.py  pipelines.py  settings.py
django_project/funda/spiders/: funda_spider.py  fundaspider2.py
django_project/project/: settings.py
django_project/woonitor/: models.py  urls.py  views.py
django_project/woonitor/migrations/: 0003_alter_listing_uuid.py  0004_remove_listing_uuid_listing_id.py  0006_rename_id_listing_uuid.py  0009_alter_listing_postcode.py  0010_listing_gemeente.py  0011_listing_verkocht.py  0012_listing_aangebodensinds_listing_bouwjaar_and_more.py  (+9 more)
funda/: pipelines.py
funda/spiders/: funda_spider.py
init/: 01_create_schema.sql
scraper/: pipelines.py  settings.py
scraper/spiders/: funda_spider.py
scrapers/: .env.template  Dockerfile  README.md  config.py  crawler.py  docker-compose.yml  pyproject.toml  scraper.py  writer.py
scrapers/init/: 01_create_schema.sql
scrapers/src/: config.py  crawler.py  scraper.py  writer.py
scrapy_proj/scrapy_project/: middlewares.py  pipelines.py
web/: db.sqlite3
web/web/: urls.py
web/woonitor/: apps.py  models.py  urls.py
(+15 files in other folders)
